# MTGS

./: .gitignore  1.py  2.py  CLAUDE.md  HYBRID_QUICKSTART.md  INTEGRATION_COMPLETE.md  VERSION_CHANGELOG.md  VERSION_ISSUES.md  VERSION_LOG.md  check_integration.sh  key.py  pyproject.toml  test_hybrid_integration.py
docs/: 1.md  2_beziergs_analysis.md  3_hybrid_integration_guide.md  4_implementation_summary.md  README.md
mtgs/config/: MTGS_Hybrid.py  MTGS_static.py
mtgs/dataset/: nuplan_dataparser.py
mtgs/scene_model/: mtgs_scene_graph.py
mtgs/scene_model/gaussian_model/: bezier_rigid_node.py  rigid_node.py  rigid_node_mirrored.py  vanilla_gaussian_splatting.py
mtgs/tools/: compare_ckpts.py  gsplat_mps_compat.py  lama_vehicle_inpaint.py  prune_export_ply.py  render.py  render_single_travel.py  stack_videos.py
nuplan_scripts/: ba_multi_traversal.py  collect_raw_data.py  export_videos.py  generate_dense_depth.py  generate_semantic_mask.py  lidar_registration_multi_traversal.py  navsim_preprocess.sh  navsim_preprocess_stage_1.sh  navsim_preprocess_stage_2.sh  navsim_video_processing.py  nuplan_video_processing.py  preview.py  stack_RGB_point_cloud.py
nuplan_scripts/configs/common/: nuplan_path.yml
nuplan_scripts/configs/navmini_token/: 2021.06.14.18.33.41_veh-35_03901_04264-add6e2410d5b5086.yaml
nuplan_scripts/misc/: generate_configs_from_navsim_filter.py
nuplan_scripts/utils/: config.py  video_scene_dict_tools.py
tests/: test_dup_gaussians.py  test_scales_property.py  test_split_gaussians.py  test_strict_splatting.py  test_vehicle_lpips_cache.py
