[project]
name = "mtgs"
description = "Official code for MTGS: Multi-Traversal Gaussian Splatting."
version = "1.0.0"
dependencies = [] 
readme = "README.md"
license = {text="Apache 2.0"}

[tool.setuptools.packages.find]
include = ["mtgs*", "nuplan_scripts*"]

[tool.ruff]
line-length = 120
lint.ignore = [
    "E501",  # Line too long.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Globa statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
    "PLR1730",  # Replace if statement with min/max
    "PLC0206",  # Extracting value from dictionary without calling `.items()`
]

[project.entry-points.'nerfstudio.method_configs']
mtgs = "mtgs.config.MTGS:method"

[project.entry-points.'nerfstudio.dataparser_configs']
nuplan = "mtgs.config.nuplan_dataparser:nuplan_dataparser"
